deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: helper-01
  namespace: finastra-np-demo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helper-01
  template:
    metadata:
      labels:
        app: helper-01
    spec:
      containers:
        - name: helper-01
          image: "quay.io/vbelouso/ctools:latest"
