00-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: advanced-policy-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
